--- a/package.json
+++ b/package.json
@@ -1,60 +1,10 @@
 {
-  "name": "pomvom_guest",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.ts",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev webpack serve --config webpack/webpack.config.dev.js",
-    "ops": "cross-env NODE_ENV=operations webpack --config webpack/webpack.config.prod.js",
-    "stage": "cross-env NODE_ENV=stage webpack --config webpack/webpack.config.prod.js",
-    "prod": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2"
+    "test": "postcss main.css -o output.css"
   },
   "devDependencies": {
-    "@types/react": "^17.0.35",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^9.0.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.1.4",
-    "dotenv-webpack": "^7.0.3",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "favicons": "^6.2.2",
-    "favicons-webpack-plugin": "^5.0.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss-color-mod-function": "^3.0.3",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.0",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "webpack": "^5.64.1",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0",
-    "webpack-merge": "^5.8.0"
+    "postcss": "^8.4.1",
+    "postcss-cli": "^9.0.2",
+    "postcss-preset-env": "^7.0.1"
   }
 }
